Add /success redirect to netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   from = "/api/*"
   to = "/.netlify/functions/server"
   status = 200
+
+[[redirects]]
+  from = "/success"
+  to = "/"
+  status = 200
